# prompt-proxy

./: .gitignore  ENVIRONMENT_RECOVERY.md  Makefile  README.md  cli.py  config.yaml  nul  proxy.py  pyproject.toml
promptproxy/: __init__.py  app.py  cli.py  config.py  console.py  env.py  errors.py  logging_config.py  models.py  pipeline.py  registry.py  types.py
promptproxy/backends/: __init__.py  base.py  litellm_backend.py  stub.py
promptproxy/filters/: __init__.py  base.py  denylist_filter.py  intercept_filter.py  noop_filter.py  regex_filter.py  semantic_filter.py
tests/: test_api.py  test_cli.py  test_config.py  test_console.py  test_env.py  test_filters.py  test_logging_config.py  test_pipeline.py  test_stub_backend.py
